# Ampere-Gemm

./: .gitignore  README.md  REG_PINGPONG_256_COMPARISON.md  benchmark.py  benchmark_bruce_wmma.py  benchmark_fair.py  benchmark_tritonbench.py  modal_runner.py  pyproject.toml  reference_wmma_async_stage3_bench.cu
results/: l4-benchmark-20260407-130943.json  l4-benchmark-20260407-131817.json  l4-benchmark-20260407-132319.json  l4-benchmark-20260407-144910.json  l4-benchmark-20260407-150144.json  l4-benchmark-20260407-150740.json  l4-benchmark-20260407-151236.json  l4-benchmark-20260407-163749.json  l4-benchmark-20260407-164500.json  l4-benchmark-20260407-164759.json  l4-benchmark-20260407-165724.json  l4-benchmark-20260407-165755.json  l4-benchmark-20260407-170658.json  l4-benchmark-20260407-170736.json  l4-benchmark-20260407-171451.json  l4-benchmark-20260407-171801.json  l4-benchmark-20260407-172806.json  l4-benchmark-20260407-173954.json  l4-benchmark-20260407-174344.json  l4-benchmark-20260407-175240.json  l4-benchmark-20260407-175645.json  l4-benchmark-20260407-175940.json  l4-benchmark-20260407-181223.json  l4-benchmark-20260407-181459.json  l4-benchmark-20260407-181730.json  l4-benchmark-20260407-183408.json  l4-benchmark-20260407-183616.json  l4-benchmark-20260407-184318.json  l4-benchmark-20260407-185137.json  l4-benchmark-20260407-193804.json  l4-benchmark-20260407-204657.json  l4-benchmark-20260407-205106.json  l4-tritonbench-20260407-185243.json  l4-tritonbench-20260407-185833.json  l4-tritonbench-20260407-190546.json  l4-tritonbench-20260407-191958.json  (+7 more)
(+20 files in other folders)
