[project]
name = "tensorcore-gemm"
version = "0.1.0"
description = "Minimal standalone Tensor Core GEMM repo with WMMA and MMA/PTX kernels"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "modal>=1.0.0",
    "setuptools>=68.0.0",
]

[project.optional-dependencies]
cuda = [
    "ninja>=1.11.0",
    "torch>=2.6.0",
]
bench = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "nvidia-ml-py>=12.560.30",
    "psutil>=5.9.0",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
